Add missing final modifiers Refactoring httpsClient to return HttpsRequest Add httpsClientProxy Moving Monri urls to url provider Configure kotlin for application module